Fix bugs in co2-contrasted directive, hopefully for good

--- a/app/styles/pages/artifact.styl
+++ b/app/styles/pages/artifact.styl
@@ -38,4 +38,6 @@ carousel-height = gd(20)
     line-height 1.5
 
   section.about
+    background-image url('/images/white-hash-20.png')
     background-color nyellow
+    padding 5rem 6rem
